src/parser.output
Terminals unused in grammar

   T_MOD
   T_REAL


State 3 conflicts: 4 reduce/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 129 conflicts: 1 reduce/reduce
State 137 conflicts: 2 shift/reduce
State 157 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program_decl declarations subprogram_declarations compound_statement

    2 program_decl: T_PROGRAM identifier MB_SEMICOLON

    3 declarations: multi_var_decl
    4             | %empty

    5 multi_var_decl: var_decl multi_var_decl
    6               | %empty

    7 var_decl: T_VAR list_id T_COLON T_STANDARD_TYPE T_SEMICOLON

    8 list_id: id multi_id

    9 multi_id: T_COMMA id multi_id
   10         | %empty

   11 id: identifier

   12 subprogram_declarations: subprogram_decl multi_subprogram_decl
   13                        | %empty

   14 multi_subprogram_decl: subprogram_decl multi_subprogram_decl
   15                      | %empty

   16 subprogram_decl: procedure_decl
   17                | function_decl

   18 procedure_decl: T_PROCEDURE identifier T_OBRACKET arg_list T_CBRACKET MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

   19 function_decl: T_FUNCTION identifier T_OBRACKET arg_list T_CBRACKET T_COLON T_STANDARD_TYPE MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

   20 arg_list: arg multi_arg
   21         | %empty

   22 multi_arg: T_COMMA arg multi_arg
   23          | %empty

   24 arg: identifier T_COLON T_STANDARD_TYPE

   25 compound_statement: T_BEGIN optional_statements T_END T_DOT
   26                   | %empty

   27 statements: statement
   28           | T_BEGIN optional_statements T_END

   29 optional_statements: statement multi_statement
   30                    | %empty

   31 multi_statement: statement multi_statement
   32                | %empty

   33 statement: matched_statement MB_SEMICOLON
   34          | unmatched_statement MB_SEMICOLON

   35 MB_SEMICOLON: T_SEMICOLON
   36             | %empty

   37 matched_statement: assignop
   38                  | matched_if
   39                  | while
   40                  | for
   41                  | call
   42                  | write_statement

   43 unmatched_statement: if
   44                    | T_IF expression T_THEN matched_statement T_ELSE unmatched_statement

   45 if: T_IF expression T_THEN statements

   46 matched_if: T_IF expression T_THEN matched_statement T_ELSE matched_statement

   47 write_statement: write_int
   48                | write_char
   49                | write_bool
   50                | write_ln

   51 write_int: T_WRITE_INT T_OBRACKET expression T_CBRACKET

   52 write_char: T_WRITE_CHAR T_OBRACKET expression T_CBRACKET

   53 write_bool: T_WRITE_BOOL T_OBRACKET expression T_CBRACKET

   54 write_ln: T_WRITE_LN T_OBRACKET T_CBRACKET

   55 assignop: identifier T_ASSIGNOP expression

   56 while: T_WHILE expression T_DO statements

   57 for: T_FOR assignop T_TO expression T_DO statements

   58 expression: simple_expression
   59           | simple_expression rel_op simple_expression

   60 simple_expression: term
   61                  | simple_expression add_op term

   62 term: not_element
   63     | term mul_op not_element

   64 not_element: element
   65            | not_op element

   66 element: identifier
   67        | standard_type
   68        | call
   69        | T_OBRACKET expression T_CBRACKET

   70 call: identifier T_OBRACKET call_arg_list T_CBRACKET

   71 call_arg_list: %empty
   72              | call_arg call_multi_arg

   73 call_multi_arg: %empty
   74               | T_COMMA call_arg call_multi_arg

   75 call_arg: expression

   76 add_op: T_PLUS
   77       | T_MINUS
   78       | T_OR

   79 mul_op: T_MUL
   80       | T_DIV
   81       | T_AND

   82 rel_op: T_CLT
   83       | T_CLE
   84       | T_CGT
   85       | T_CGE
   86       | T_CEQ
   87       | T_CNE

   88 not_op: T_NOT

   89 identifier: T_IDENTIFIER

   90 standard_type: T_INT
   91              | T_BOOL
   92              | T_CHAR


Terminals, with rules where they appear

$end (0) 0
error (256)
T_OR (258) 78
T_AND (259) 81
T_CEQ (260) 86
T_CNE (261) 87
T_CLT (262) 82
T_CGT (263) 84
T_CLE (264) 83
T_CGE (265) 85
T_PLUS (266) 76
T_MINUS (267) 77
T_MUL (268) 79
T_DIV (269) 80
T_MOD (270)
T_NOT (271) 88
T_PROGRAM (272) 2
T_VAR (273) 7
T_PROCEDURE (274) 18
T_FUNCTION (275) 19
T_BEGIN (276) 18 19 25 28
T_END (277) 18 19 25 28
T_IF (278) 44 45 46
T_THEN (279) 44 45 46
T_ELSE (280) 44 46
T_WHILE (281) 56
T_FOR (282) 57
T_TO (283) 57
T_DO (284) 56 57
T_ASSIGNOP (285) 55
T_OBRACKET (286) 18 19 51 52 53 54 69 70
T_CBRACKET (287) 18 19 51 52 53 54 69 70
T_SEMICOLON (288) 7 18 19 35
T_COLON (289) 7 19 24
T_COMMA (290) 9 22 74
T_DOT (291) 25
T_WRITE_INT (292) 51
T_WRITE_CHAR (293) 52
T_WRITE_BOOL (294) 53
T_WRITE_LN (295) 54
T_STANDARD_TYPE (296) 7 19 24
T_IDENTIFIER (297) 89
T_INT (298) 90
T_BOOL (299) 91
T_CHAR (300) 92
T_REAL (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
program_decl (49)
    on left: 2, on right: 1
declarations (50)
    on left: 3 4, on right: 1 18 19
multi_var_decl (51)
    on left: 5 6, on right: 3 5
var_decl (52)
    on left: 7, on right: 5
list_id (53)
    on left: 8, on right: 7
multi_id (54)
    on left: 9 10, on right: 8 9
id (55)
    on left: 11, on right: 8 9
subprogram_declarations (56)
    on left: 12 13, on right: 1
multi_subprogram_decl (57)
    on left: 14 15, on right: 12 14
subprogram_decl (58)
    on left: 16 17, on right: 12 14
procedure_decl (59)
    on left: 18, on right: 16
function_decl (60)
    on left: 19, on right: 17
arg_list (61)
    on left: 20 21, on right: 18 19
multi_arg (62)
    on left: 22 23, on right: 20 22
arg (63)
    on left: 24, on right: 20 22
compound_statement (64)
    on left: 25 26, on right: 1
statements (65)
    on left: 27 28, on right: 45 56 57
optional_statements (66)
    on left: 29 30, on right: 18 19 25 28
multi_statement (67)
    on left: 31 32, on right: 29 31
statement (68)
    on left: 33 34, on right: 27 29 31
MB_SEMICOLON (69)
    on left: 35 36, on right: 2 18 19 33 34
matched_statement (70)
    on left: 37 38 39 40 41 42, on right: 33 44 46
unmatched_statement (71)
    on left: 43 44, on right: 34 44
if (72)
    on left: 45, on right: 43
matched_if (73)
    on left: 46, on right: 38
write_statement (74)
    on left: 47 48 49 50, on right: 42
write_int (75)
    on left: 51, on right: 47
write_char (76)
    on left: 52, on right: 48
write_bool (77)
    on left: 53, on right: 49
write_ln (78)
    on left: 54, on right: 50
assignop (79)
    on left: 55, on right: 37 57
while (80)
    on left: 56, on right: 39
for (81)
    on left: 57, on right: 40
expression (82)
    on left: 58 59, on right: 44 45 46 51 52 53 55 56 57 69 75
simple_expression (83)
    on left: 60 61, on right: 58 59 61
term (84)
    on left: 62 63, on right: 60 61 63
not_element (85)
    on left: 64 65, on right: 62 63
element (86)
    on left: 66 67 68 69, on right: 64 65
call (87)
    on left: 70, on right: 41 68
call_arg_list (88)
    on left: 71 72, on right: 70
call_multi_arg (89)
    on left: 73 74, on right: 72 74
call_arg (90)
    on left: 75, on right: 72 74
add_op (91)
    on left: 76 77 78, on right: 61
mul_op (92)
    on left: 79 80 81, on right: 63
rel_op (93)
    on left: 82 83 84 85 86 87, on right: 59
not_op (94)
    on left: 88, on right: 65
identifier (95)
    on left: 89, on right: 2 11 18 19 24 55 66 70
standard_type (96)
    on left: 90 91 92, on right: 67


State 0

    0 $accept: . program $end

    T_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: T_PROGRAM . identifier MB_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4

    identifier  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: program_decl . declarations subprogram_declarations compound_statement

    T_VAR  shift, and go to state 7

    $end         reduce using rule 4 (declarations)
    $end         [reduce using rule 6 (multi_var_decl)]
    T_PROCEDURE  reduce using rule 4 (declarations)
    T_PROCEDURE  [reduce using rule 6 (multi_var_decl)]
    T_FUNCTION   reduce using rule 4 (declarations)
    T_FUNCTION   [reduce using rule 6 (multi_var_decl)]
    T_BEGIN      reduce using rule 4 (declarations)
    T_BEGIN      [reduce using rule 6 (multi_var_decl)]
    $default     reduce using rule 4 (declarations)

    declarations    go to state 8
    multi_var_decl  go to state 9
    var_decl        go to state 10


State 4

   89 identifier: T_IDENTIFIER .

    $default  reduce using rule 89 (identifier)


State 5

    2 program_decl: T_PROGRAM identifier . MB_SEMICOLON

    T_SEMICOLON  shift, and go to state 11

    $default  reduce using rule 36 (MB_SEMICOLON)

    MB_SEMICOLON  go to state 12


State 6

    0 $accept: program $end .

    $default  accept


State 7

    7 var_decl: T_VAR . list_id T_COLON T_STANDARD_TYPE T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4

    list_id     go to state 13
    id          go to state 14
    identifier  go to state 15


State 8

    1 program: program_decl declarations . subprogram_declarations compound_statement

    T_PROCEDURE  shift, and go to state 16
    T_FUNCTION   shift, and go to state 17

    $default  reduce using rule 13 (subprogram_declarations)

    subprogram_declarations  go to state 18
    subprogram_decl          go to state 19
    procedure_decl           go to state 20
    function_decl            go to state 21


State 9

    3 declarations: multi_var_decl .

    $default  reduce using rule 3 (declarations)


State 10

    5 multi_var_decl: var_decl . multi_var_decl

    T_VAR  shift, and go to state 7

    $default  reduce using rule 6 (multi_var_decl)

    multi_var_decl  go to state 22
    var_decl        go to state 10


State 11

   35 MB_SEMICOLON: T_SEMICOLON .

    $default  reduce using rule 35 (MB_SEMICOLON)


State 12

    2 program_decl: T_PROGRAM identifier MB_SEMICOLON .

    $default  reduce using rule 2 (program_decl)


State 13

    7 var_decl: T_VAR list_id . T_COLON T_STANDARD_TYPE T_SEMICOLON

    T_COLON  shift, and go to state 23


State 14

    8 list_id: id . multi_id

    T_COMMA  shift, and go to state 24

    $default  reduce using rule 10 (multi_id)

    multi_id  go to state 25


State 15

   11 id: identifier .

    $default  reduce using rule 11 (id)


State 16

   18 procedure_decl: T_PROCEDURE . identifier T_OBRACKET arg_list T_CBRACKET MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4

    identifier  go to state 26


State 17

   19 function_decl: T_FUNCTION . identifier T_OBRACKET arg_list T_CBRACKET T_COLON T_STANDARD_TYPE MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4

    identifier  go to state 27


State 18

    1 program: program_decl declarations subprogram_declarations . compound_statement

    T_BEGIN  shift, and go to state 28

    $default  reduce using rule 26 (compound_statement)

    compound_statement  go to state 29


State 19

   12 subprogram_declarations: subprogram_decl . multi_subprogram_decl

    T_PROCEDURE  shift, and go to state 16
    T_FUNCTION   shift, and go to state 17

    $default  reduce using rule 15 (multi_subprogram_decl)

    multi_subprogram_decl  go to state 30
    subprogram_decl        go to state 31
    procedure_decl         go to state 20
    function_decl          go to state 21


State 20

   16 subprogram_decl: procedure_decl .

    $default  reduce using rule 16 (subprogram_decl)


State 21

   17 subprogram_decl: function_decl .

    $default  reduce using rule 17 (subprogram_decl)


State 22

    5 multi_var_decl: var_decl multi_var_decl .

    $default  reduce using rule 5 (multi_var_decl)


State 23

    7 var_decl: T_VAR list_id T_COLON . T_STANDARD_TYPE T_SEMICOLON

    T_STANDARD_TYPE  shift, and go to state 32


State 24

    9 multi_id: T_COMMA . id multi_id

    T_IDENTIFIER  shift, and go to state 4

    id          go to state 33
    identifier  go to state 15


State 25

    8 list_id: id multi_id .

    $default  reduce using rule 8 (list_id)


State 26

   18 procedure_decl: T_PROCEDURE identifier . T_OBRACKET arg_list T_CBRACKET MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

    T_OBRACKET  shift, and go to state 34


State 27

   19 function_decl: T_FUNCTION identifier . T_OBRACKET arg_list T_CBRACKET T_COLON T_STANDARD_TYPE MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

    T_OBRACKET  shift, and go to state 35


State 28

   25 compound_statement: T_BEGIN . optional_statements T_END T_DOT

    T_IF          shift, and go to state 36
    T_WHILE       shift, and go to state 37
    T_FOR         shift, and go to state 38
    T_WRITE_INT   shift, and go to state 39
    T_WRITE_CHAR  shift, and go to state 40
    T_WRITE_BOOL  shift, and go to state 41
    T_WRITE_LN    shift, and go to state 42
    T_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 30 (optional_statements)

    optional_statements  go to state 43
    statement            go to state 44
    matched_statement    go to state 45
    unmatched_statement  go to state 46
    if                   go to state 47
    matched_if           go to state 48
    write_statement      go to state 49
    write_int            go to state 50
    write_char           go to state 51
    write_bool           go to state 52
    write_ln             go to state 53
    assignop             go to state 54
    while                go to state 55
    for                  go to state 56
    call                 go to state 57
    identifier           go to state 58


State 29

    1 program: program_decl declarations subprogram_declarations compound_statement .

    $default  reduce using rule 1 (program)


State 30

   12 subprogram_declarations: subprogram_decl multi_subprogram_decl .

    $default  reduce using rule 12 (subprogram_declarations)


State 31

   14 multi_subprogram_decl: subprogram_decl . multi_subprogram_decl

    T_PROCEDURE  shift, and go to state 16
    T_FUNCTION   shift, and go to state 17

    $default  reduce using rule 15 (multi_subprogram_decl)

    multi_subprogram_decl  go to state 59
    subprogram_decl        go to state 31
    procedure_decl         go to state 20
    function_decl          go to state 21


State 32

    7 var_decl: T_VAR list_id T_COLON T_STANDARD_TYPE . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 60


State 33

    9 multi_id: T_COMMA id . multi_id

    T_COMMA  shift, and go to state 24

    $default  reduce using rule 10 (multi_id)

    multi_id  go to state 61


State 34

   18 procedure_decl: T_PROCEDURE identifier T_OBRACKET . arg_list T_CBRACKET MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 21 (arg_list)

    arg_list    go to state 62
    arg         go to state 63
    identifier  go to state 64


State 35

   19 function_decl: T_FUNCTION identifier T_OBRACKET . arg_list T_CBRACKET T_COLON T_STANDARD_TYPE MB_SEMICOLON declarations T_BEGIN optional_statements T_END T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 21 (arg_list)

    arg_list    go to state 65
    arg         go to state 63
    identifier  go to state 64


State 36

   44 unmatched_statement: T_IF . expression T_THEN matched_statement T_ELSE unmatched_statement
   45 if: T_IF . expression T_THEN statements
   46 matched_if: T_IF . expression T_THEN matched_statement T_ELSE matched_statement

    T_NOT         shift, and go to state 66
    T_OBRACKET    shift, and go to state 67
    T_IDENTIFIER  shift, and go to state 4
    T_INT         shift, and go to state 68
    T_BOOL        shift, and go to state 69
    T_CHAR        shift, and go to state 70

    expression         go to state 71
    simple_expression  go to state 72
    term               go to state 73
    not_element        go to state 74
    element            go to state 75
    call               go to state 76
    not_op             go to state 77
    identifier         go to state 78
    standard_type      go to state 79


State 37

   56 while: T_WHILE . expression T_DO statements
